# FlipMarauder-WiFi

./: .gitignore  README.md  logger.py  main.py  marauder_data.db  pyproject.toml  requirements.txt  super.py
.claude/: launch.json
logic/: NetScanner.py  net_scanner.py  port_scanner.py
models/: DataBaseManager.py  DiscoveryEvent.py  MarauderParser.py  NetworkManager.py  WiFiNetwork.py  marauder_parser.py
ui/: app.py  app.tcss  clean_screen.py  events.py  handle_scan.py  logo.py  network_table.py  port_options.py
ui/screens/: main_menu.py  port_selection.py  scan.py
ui/widgets/: logo_widget.py  scan_table.py  status_bar.py
